# flyingros

./: .gitignore  .travis.yml  INSTALL.md  PROJECT_ARCHITECTURE.MD  README.md
flyingros/: CMakeLists.txt  INSTALL_MAVROS.md  ODROID_SPECIFIC.md  PYTHON_INTERFACE.md  README.md  SPECIFIC_ODROID.md  SPECIFIC_PIXHAWK.md  luaros.md  package.xml
flyingros/launch/: dual_lasers.launch  flying_lasers.launch  flying_lasers_lpe.launch  flying_lasers_tasks.launch  msf.launch  msf_rtk_only.launch
flyingros_core/: CMakeLists.txt
flyingros_libs/: CMakeLists.txt  README.md  package.xml  setup.py
flyingros_libs/src/flyingros_libs/: algorithm_functions.py  getch.py  kalman.py  lasers.py  tasks.py  transformations.py
flyingros_localization/: CMakeLists.txt  package.xml
flyingros_msgs/: CMakeLists.txt  README.md  package.xml
flyingros_msgs/msg/: Battery.msg  Distance.msg  Mission.msg  MultiEcho.msg  PositionWithCovariance.msg  PositionWithCovarianceStamped.msg  RPY.msg  RPYPose.msg  Report.msg  Task.msg
flyingros_msgs/srv/: MissionHandle.srv  MissionRequest.srv  TaskHandle.srv  TaskRequest.srv
flyingros_nav/: CMakeLists.txt  README.md  TASKS.MD  package.xml
flyingros_nav/launch/: manual.launch  task.launch
flyingros_nav/nodes/: control_RTK.py  control_tasks.py  control_thread  control_thread.py  control_thread_rtk.py  manual_node  nav_application  task_node  urwid_app.py
flyingros_nav/scenari/: scenario_square  scenario_stairway
flyingros_nav/scenari/scenari_py/: scenario_circle
flyingros_nav/scenari/scenari_web/: generators.js  scenario_web_circle.json  scenario_web_square.json
flyingros_nav/scripts/: console_task.py  console_task_urwid_functions.py
flyingros_nav/test/: task.test  unit_test_task.py
flyingros_nav/tests/: test.task.py  test.tasks.old.py  test.tasks.py
flyingros_pose/: CAMERA_DRIVERS.md  CMakeLists.txt  INSTALL.md  README.md  VIO_SVO_MSF.MD  VISUAL_ESTIMATION.md  package.xml  setup.py
flyingros_pose/cfg/: default.yaml
flyingros_pose/cfg/calibrationdata/: ost.yaml
flyingros_pose/cfg/cameras/odroid360p/ptam(atan)/: camera.cfg
flyingros_pose/cfg/cameras/odroid720p/calibrationdata/: ost.txt
flyingros_pose/cfg/laser/: 2lasers.yaml  6lasers.yaml
flyingros_pose/cfg/msf/: lasers_altitude_fix.yaml  lasers_pose_fix.yaml  lasers_position_fix.yaml  pose_sensor.yaml  pose_sensor_fix.yaml  position_sensor.yaml  px4_fix.yaml  rtk_sensor_fix.yaml
flyingros_pose/cfg/odroid360p/svo/: odroid360p.yaml
flyingros_pose/cfg/pixhawk/: px4_config.yaml  px4_pluginlists.yaml
flyingros_pose/cfg/vimba1024/: atanvimba.yaml
flyingros_pose/include/flyingros_pose/: laser_algorithm_functions.h
flyingros_pose/include/laser/: laser_algorithm_functions.h
flyingros_pose/launch/: README.md  altitude_lasers.launch  camera_calibration.launch  camera_calibration_ptam.launch  camera_calibration_ros.launch  camera_mavros_bag.launch  camera_only.launch  camera_vimba_mono.launch  laser_node.launch  ptam_calibrator_usb_cam.launch  ptam_usb_cam.launch  px4_mavros.launch  px4_rosserial.launch  px4_svo_msf.launch  rovio_usb_cam.launch  six_lasers_algorithm.launch  svo_live.launch  svo_vimba.launch
flyingros_pose/nodes/: laser_altitude  lasers_msf_yaw_switch  rtk  rtk_laser_fused  six_lasers
flyingros_pose/param/: odroid752_416.yaml  px4_vo_msf.yaml  vo_odroid.yaml
flyingros_pose/src/: altitude_lasers.cpp  laser_node.cpp  offb_control_test.cpp  six_lasers_algorithm.cpp  test_node.cpp
flyingros_pose/src/flyingros_pose/: laser_algorithm_functions.cpp
flyingros_pose/tests/: algorithm_functions_tests.cpp  mavros_quaternion_test.py
flyingros_pose/tutorials/: LASERS.MD  MSF.MD  ORB_SLAM2.MD  POZYX.MD  PTAM.MD  README.MD  REVBO.MD  ROVIO.MD  RTK_PIKSI.MD  VIO_SVO_MSF.MD
flyingros_pose/tutorials/MSF_INTEGRATION/: IMPLEMENT_A_NODE.md  IMPLEMENT_A_NODE.txt  MSF.MD  README.md
flyingros_pose/tutorials/VISION_ODOMETRY/: PTAM.MD  README.MD  ROVIO.MD  VIO_SVO_MSF.MD
flyingros_web/: CMakeLists.txt  README.md  package.xml  setup.py
flyingros_web/launch/: rosbridge_launch.launch
flyingros_web/nodes/: rtk_csv  web_export
flyingros_web/www/: README.md  example.html  example.jade  gulpfile.js  index.html  index.jade  package.json
flyingros_web/www/app/: app.js
flyingros_web/www/css/: app.css  custom.css  font-awesome.min.css  modalise.min.css
flyingros_web/www/js/: list.js  modalise.min.js  roslib.js
flyingros_web/www/jslib/: list.min.js  paper-core.min.js
flyingros_web/www/src/: config.js  dom.js  entry.js  form_validator.js  paper.js  ros.js  start.js  task.js
flyingros_web/www/src/utils/: extend.js
