<?xml version="1.0"?>
<package>
  <name>flyingros</name>
  <version>0.0.0</version>
  <description>The flyingros package</description>

  <maintainer email="alexis.paques@gmail.com">Alexis Paques</maintainer>
  <license>GPLv3</license>
  <url type="website">http://alexistm.github.io/flyinros</url>
  <author email="alexis.paques@gmail.com">Alexis Paques</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>