<?xml version="1.0"?>
<package>
  <name>flyingros_nav</name>
  <version>0.0.0</version>
  <description>The flyingros_nav package</description>

  <maintainer email="alexis.paques@gmail.com">Alexis Paques</maintainer>
  <license>GPLv3</license>
  <url type="website">http://alexistm.github.io/flyinros</url>
  <author email="alexis.paques@gmail.com">Alexis Paques</author>

  <run_depend>message_runtime</run_depend>
  <run_depend>flyingros_libs</run_depend>
  <run_depend>flyingros_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
</package>
