<?xml version="1.0"?>
<package format="2">
  <name>flyingros_pose</name>
  <version>0.0.1</version>
  <description>The flyingros localization package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alexis.paques@gmail.com">Alexis Paques</maintainer>
  <license>GPLv3</license>
  <url type="website">http://alexistm.github.io/flyinros</url>
  <author email="alexis.paques@gmail.com">Alexis Paques</author>


   <buildtool_depend>catkin</buildtool_depend>
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->

  <!-- Lasers algorithm cpp -->
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>kdl_conversions</depend>

  <depend>rospy</depend>
  <depend>swiftnav_piksi</depend>
  <depend>mavros</depend>
  <depend>mavros-extras</depend>
  <depend>flyingros_libs</depend>
  <depend>flyingros_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
